--- a/config/constants.ini
+++ b/config/constants.ini
@@ -17,6 +17,6 @@
 ; !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 [vw_constants]
-video_id_encryption_key   = VW_PlsNoLeak20A0P856
-channel_id_encryption_key = Aubrey is pretty awesome! <3
-channel_id_encryption_iv  = VW_AES_PlsNoLeak
+video_id_encryption_key   = "VW_PlsNoLeak20A0P856"
+channel_id_encryption_key = "Aubrey is pretty awesome! <3"
+channel_id_encryption_iv  = "VW_AES_PlsNoLeak"
