Whatever I had before the project ended

--- a/config/constants.ini
+++ b/config/constants.ini
@@ -20,3 +20,5 @@
 video_id_encryption_key   = "VW_PlsNoLeak20A0P856"
 channel_id_encryption_key = "Aubrey is pretty awesome! <3"
 channel_id_encryption_iv  = "VW_AES_PlsNoLeak"
+
+twig_debug = true
